--- a/Task-1_Landing Page/index.html
+++ b/Task-1_Landing Page/index.html
@@ -35,7 +35,7 @@
         </div>
       </div>
     </nav>
-    <!-- akhir Navbar -->
+    <!--  Navbar -->
 
     <!-- Jumbotron -->
     <div class="jumbotron jumbotron-fluid">
@@ -44,7 +44,7 @@
         <a href="#" class="btn btn-info btn-lg tombol">View Our Work</a>
       </div>
     </div>
-    <!-- akhir Jumbotron -->
+    <!-- Jumbotron -->
 
 
     <!-- container -->
@@ -72,7 +72,7 @@
           </div>
         </div>
       </div>
-      <!-- akhir info panel -->
+      <!-- info panel -->
 
 
       <!-- Workingspace -->
@@ -87,7 +87,7 @@
           <a href="#" class="btn btn-danger tombol">Gallery</a>
         </div>
       </div>
-      <!-- akhir Workingspace -->
+      <!-- Workingspace -->
 
 
       <!-- Testimonial -->
@@ -110,11 +110,11 @@
           </div>
         </div>
       </section>
-      <!-- akhir Testimonial -->
+      <!-- Testimonial -->
 
 
     </div>
-    <!-- akhir container -->
+    <!-- container -->
 
 
 
